<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_scrollLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".InfoActivity" >

    <LinearLayout
        android:id="@+id/info_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/info_linearLayout_age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/info_age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:background="@drawable/age"
                android:contentDescription="@string/age_activity_info" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/info_linearLayout_weight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_activity_weight_margin"
            android:layout_marginTop="@dimen/info_activity_weight_margin"
            android:background="#FFFFFF"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/info_weight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="93dp"
                android:background="@drawable/weight"
                android:contentDescription="@string/weight_activity_info" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/info_hunger_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_activity_Label_bottom_margin"
            android:layout_marginTop="@dimen/info_activity_Label_top_margin"
            android:background="@drawable/hungry"
            android:contentDescription="@string/hunger_activity_info" />

        <ImageView
            android:id="@+id/info_hunger_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hearts_2"
            android:contentDescription="@string/hunger_activity_info" />

        <ImageView
            android:id="@+id/info_strength_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_activity_Label_bottom_margin"
            android:layout_marginTop="@dimen/info_activity_Label_top_margin"
            android:background="@drawable/strength"
            android:contentDescription="@string/strength_activity_info" />

        <ImageView
            android:id="@+id/info_strength_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/hearts_4"
            android:contentDescription="@string/strength_activity_info" />

        <ImageView
            android:id="@+id/info_energy_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_activity_Label_bottom_margin"
            android:layout_marginTop="@dimen/info_activity_Label_top_margin"
            android:background="@drawable/energy"
            android:contentDescription="@string/energy_activity_info" />

        <ImageView
            android:id="@+id/info_energy_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/energy_8"
            android:contentDescription="@string/energy_activity_info" />

        <ImageView
            android:id="@+id/info_victories_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/info_activity_Label_bottom_margin"
            android:layout_marginTop="@dimen/info_activity_Label_top_margin"
            android:background="@drawable/victories"
            android:contentDescription="@string/victories_activity_info" />

        <LinearLayout
            android:id="@+id/info_linearLayout_victories"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_marginLeft="120dp"
            android:orientation="horizontal" >
        </LinearLayout>
    </LinearLayout>

</ScrollView>